--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "nest_struct"
 version = "0.1.0"
 edition = "2021"
+description = "Nest struct definitions with minimal syntax changes"
+license = "MIT"
 
 [dependencies]
 
