--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "Nest struct definitions with minimal syntax changes"
 license = "MIT"
 
 [dependencies]
+convert_case = "0.6.0"
 proc-macro2 = "1"
 quote = "1"
 syn = "2"
