--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ syn = "2"
 
 [dev-dependencies]
 macrotest = "1"
+reqwest = { version = "0.12.9", features = ["blocking"] }
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
 
 [lib]
 proc-macro = true
