--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,14 @@ version = "0.1.3"
 edition = "2021"
 description = "Nest struct definitions with minimal syntax changes"
 license = "MIT"
+repository = "https://github.com/ZibanPirate/nest_struct"
+keywords = ["nest", "struct", "macro"]
+categories = [
+    "data-structures",
+    "development-tools",
+    "rust-patterns",
+    "web-programming",
+]
 
 [dependencies]
 convert_case = "0.6.0"
@@ -20,3 +28,6 @@ serde_json = "1.0.132"
 [lib]
 proc-macro = true
 path = "src/lib.rs"
+
+[badges]
+maintenance = { status = "actively-developed" }
