publish crate on github release

--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   apply-version:
-    name: cargo bump
+    name: "Apply Version"
     runs-on: ubuntu-latest
     permissions:
         contents: write
