--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ categories = [
 convert_case = "0.6.0"
 proc-macro2 = "1"
 quote = "1"
-syn = "2"
+syn = { version = "2", features = ["full"] }
 
 [dev-dependencies]
 macrotest = "1"
