--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ syn = { version = "2", features = ["full"] }
 
 [dev-dependencies]
 macrotest = "1"
+trybuild = "1"
 reqwest = { version = "0.12", default-features = false, features = [
     "blocking",
     "rustls-tls",
